refactor: 메소드 변경
Jira: S11P31A210-444